test/corpus/statements
================================================================================
Assert
================================================================================

assert 1 == 2, "One is not two";
assert 1 == 1;

--------------------------------------------------------------------------------

(source_file
  (nl)
  (expr
    (expr
      (constant
        (integer)))
    (expr
      (constant
        (integer))))
  (assert_msg
    (expr
      (constant
        (string))))
  (nl)
  (expr
    (expr
      (constant
        (integer)))
    (expr
      (constant
        (integer))))
  (nl))

================================================================================
Redef record
================================================================================

redef record Foo += { foo: Info &optional; };
redef record Conn::Info$ip_proto -= { &log };

--------------------------------------------------------------------------------

(source_file
  (nl)
  (redef_record_decl
    (id)
    (type_spec
      (id)
      (type
        (id))
      (attr_list
        (attr))))
  (nl)
  (redef_record_decl
    (expr
      (field_access
        (expr
          (id))
        (id)))
    (attr_list
      (attr)))
  (nl))
